[package]
name = "simple_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { version = "0.6", default-features = false, features = ["prost-codec", "default-logger"] }
prost = "0.7"
protobuf = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
#async-trait = "0.1"
#tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
#flume = "0.10"
rocksdb = { version = "0.18", default-features = false, features = ["zstd"] }
tap = "1"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
