[package]
name = "simple_kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[workspace]
members = [
    ".",
    "skvctl",
    "skvregistry"
]

[patch.crates-io]
raft = { git = "https://github.com/Sherlock-Holo/raft-rs" }
protobuf-build = { git = "https://github.com/Sherlock-Holo/protobuf-build" }

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
protobuf = "2"
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"
hyper = "0.14"
http = "0.2"
tower-service = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
tokio-stream = { version = "0.1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
flume = "0.10"
rocksdb = { version = "0.18", default-features = false, features = ["zstd"] }
tap = "1"
bincode = "1"
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
futures-util = { version = "0.3", features = ["sink"] }
serde_yaml = "0.8"
clap = { version = "3", features = ["derive", "color", "suggestions"] }
rayon = "1"
pin-project = "1"
slog = "2"
rand = "0.8"
dashmap = "5"

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"

[dev-dependencies]
tempfile = "3"
once_cell = "1"
