[package]
name = "skvregistry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tonic = "0.7"
prost = "0.10"
prost-types = "0.10"
http = "0.2"
bytes = "1"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5"
tap = "1"

[build-dependencies]
tonic-build = "0.7"
prost-build = "0.10"
tokio = { version = "1", features = ["rt", "macros", "time"] }
